[package]
name = "plutus_data"
version = "0.0.91"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
description = "derive macros for converting between rust data types and plutus-data"
repository = "https://github.com/OlofBlomqvist/plutus_data"
license-file = "licence"

[dependencies]
pallas-primitives = "0.18.1"
pallas-codec = "0.18.1"
pallas = "0.18.1"

plutus_data_derive = "0.0.8"
#plutus_data_derive = { path = "../plutus_data_derive" }
hex = "^0.4.3"



