[package]
name = "plutus_data"
version = "0.0.93"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
description = "derive macros for converting between rust data types and plutus-data"
repository = "https://github.com/OlofBlomqvist/plutus_data"
license-file = "licence"

[dependencies]
pallas-primitives = "0.19.1"
pallas-codec = "0.19.1"
pallas = "0.19.1"

plutus_data_derive = "0.0.81"
#plutus_data_derive = { path = "../plutus_data_derive" }
hex = "^0.4.3"



